Lab3 almost done

--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -153,18 +153,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_parameters(h):\n",
-    "    \n",
-    "    return X, Y, hx, hy"
+    "# def get_parameters(h):\n",
+    "#     x_l, x_r = -1, 1\n",
+    "#     y_l, y_r = -1, 1\n",
+    "#     lx, ly = np.abs(x_r- x_l), np.abs(y_r - y_l)\n",
+    "#     Nx, Ny = int(np.round(lx / h)), int(np.round(ly / h))\n",
+    "#     hx, hy = lx / Nx, ly / Ny\n",
+    "\n",
+    "#     x = np.linspace(x_l + hx / 2, x_r - hx / 2, Nx, endpoint=True)\n",
+    "#     y = np.linspace(y_l + hy / 2, y_r - hy / 2, Ny, endpoint=True)\n",
+    "\n",
+    "#     X, Y = np.meshgrid(x, y, indexing=\"ij\")\n",
+    "#     print(hx, hy, X, Y)\n",
+    "#     return X, Y, hx, hy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -365,16 +375,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fe053c58520>]"
+       "[<matplotlib.lines.Line2D at 0x7ff058392e00>]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
