Almost done, some changes needed

--- a/test.ipynb
+++ b/test.ipynb
@@ -11,29 +11,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = [[0.17, 0, 0, 0, 0], [0, 0.19, -0.103, 0, 0], [0, -0.103, 0.19, 0, 0], [0, 0, 0, 0.26, 0], [0, 0, 0, 0, 0.29]]"
+    "sigma = np.array([0.01, 0.02, 0.04, 0.06])\n",
+    "x = np.array([1.11, 1.17, 1.19, 1.23])\n",
+    "Kx = np.diag(sigma ** 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0.17, 0, 0, 0, 0],\n",
-       " [0, 0.19, -0.103, 0, 0],\n",
-       " [0, -0.103, 0.19, 0, 0],\n",
-       " [0, 0, 0, 0.26, 0],\n",
-       " [0, 0, 0, 0, 0.29]]"
+       "array([[0.0001, 0.    , 0.    , 0.    ],\n",
+       "       [0.    , 0.0004, 0.    , 0.    ],\n",
+       "       [0.    , 0.    , 0.0016, 0.    ],\n",
+       "       [0.    , 0.    , 0.    , 0.0036]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Kx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma_1_sum = np.sum(1 / sigma ** 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(13402.777777777777)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigma_1_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = (1 / sigma ** 2) / sigma_1_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.74611399, 0.1865285 , 0.04663212, 0.02072539])"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,63 +103,275 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = [0.162, 0.318, 0.318, 0.106, 0.095]"
+    "Wx = W * x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.162, 0.318, 0.318, 0.106, 0.095]"
+       "array([0.82818653, 0.21823834, 0.05549223, 0.02549223])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x"
+    "Wx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = 0\n",
-    "for i in range(5):\n",
-    "    for j in range(5):\n",
-    "        s += x[i] * x[j] * W[i][j]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.027595666000000005"
+       "np.float64(1.1274093264248706)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s"
+    "np.sum(Wx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(7.461139896373058e-05)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 / sigma_1_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r12 = -0.76\n",
+    "Kx[0, 1] = r12 * sigma[0] * sigma[1]\n",
+    "Kx[1, 0] = r12 * sigma[1] * sigma[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.0001  , -0.000152,  0.      ,  0.      ],\n",
+       "       [-0.000152,  0.0004  ,  0.      ,  0.      ],\n",
+       "       [ 0.      ,  0.      ,  0.0016  ,  0.      ],\n",
+       "       [ 0.      ,  0.      ,  0.      ,  0.0036  ]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Kx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Kx_1 = np.linalg.inv(Kx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[23674.24242424,  8996.21212121,    -0.        ,    -0.        ],\n",
+       "       [ 8996.21212121,  5918.56060606,     0.        ,     0.        ],\n",
+       "       [    0.        ,     0.        ,   625.        ,     0.        ],\n",
+       "       [    0.        ,     0.        ,     0.        ,   277.77777778]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Kx_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ones = np.ones(Kx_1.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(48488.00505050504)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(Kx_1 @ ones) @ ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_ob = ((Kx_1 @ ones) @ x) / ((Kx_1 @ ones) @ ones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1.1301744678080852)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_ob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(2.062365731397696e-05)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 / ((Kx_1 @ ones) @ ones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.004541327703874381)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(1 / ((Kx_1 @ ones) @ ones))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.008637789008984334)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(1 / sigma_1_sum)"
    ]
   },
   {
@@ -108,9 +379,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "W_new = [[0.17, 0, 0, 0, 0], [0, 0.19, 0, 0, 0], [0, 0, 0.19, 0, 0], [0, 0, 0, 0.26, 0], [0, 0, 0, 0, 0.29]]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
